@@ -1,3 +1,11 @@
+2009-07-14  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	Draw box so that shaders get correct vertex positions.
+
+	* Rnr/GL/Box_GL_Rnr.cxx:
+	Properly place corner vertices at coordinates as given by the mA,
+	mB and mC size variables (scaling was used before).
+
 2009-07-09  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	Changes required to support shaders.
